--- a/sitio/src/views/partials/footer.ejs
+++ b/sitio/src/views/partials/footer.ejs
@@ -3,6 +3,7 @@
         <div class="container-footer">
             <div class="column0">
                 <img class="column0-img" src="\images\AKAMARU-banner.png" alt="">
+                <a href="/products/vistaAdmin">Administrador</a>
             </div>
             <div class="column1">
                 <h3>Información de la Empresa </h3>
