--- a/sitio/public/stylesheets/style.css
+++ b/sitio/public/stylesheets/style.css
@@ -7,4 +7,4 @@
 @import url('./detail.css');
 @import url('./home.css');
 @import url('./productAdd.css');
-
+@import url('./listaProductsAdmin.css');
