--- a/sitio/src/views/productAdd.ejs
+++ b/sitio/src/views/productAdd.ejs
@@ -10,8 +10,8 @@
           <h2>Agregar Producto</h2>
             <form action="" method="POST" enctype="multipart/form-data">
                 <div class="mb-3">
-                    <label for="formGroupExampleInput" class="form-label">Nombre</label>
-                    <input type="text" class="form-control" id="formGroupExampleInput" name="title">
+                    <label for="formGroupExampleInput" class="form-label" >Nombre</label>
+                    <input type="text" class="form-control" id="formGroupExampleInput" name="name">
                   </div>
                   <div class="mb-3">
                     <label for="floatingTextarea">Descripción</label>
@@ -21,15 +21,15 @@
                     <label for="productImagen" class = "form-label">Imagen</label>
                     <input type="file" class ="form control" id = "productImagen" name = "image">
                 </div>
-                <div class="mb-3" class="categorias">
+                <div class="mb-3 categorias">
                 <label for="category" class="form-label">Categoría</label>
-                <select name="category" id="category">
+                <select name="category" id="category" >
                 <option value="tazas">Tazas</option>
                 <option value="figuras">Figuras</option>
                 <option value="mangas">Mangas</option>
               </select>
                 </div>
-                <div class="mb-3">
+                <div class="mb-3 categorias">
                   <label for="colors" class="form-label">Elije un color </label>
                 <select name="colors" id="colors" class="colors">
                 <option value="red"> Rojo </option>
@@ -41,8 +41,13 @@
                     <label for="formGroupExampleInput2" class="form-label">Precio</label>
                     <input type="number" class="form-control" id="formGroupExampleInput2" name="price">
                   </div>
+                  <div class="mb-3">
+                    <label for="formGroupExampleInput2" class="form-label">Cuotas</label>
+                    <input type="number" class="form-control" id="formGroupExampleInput2" name="discount">
+                  </div>
                   
                   <button class="btn btn-primary" type="submit">Guardar</button>
+
             </form>
         </div>
     </section>
