--- a/sitio/src/views/vistaProduct.ejs
+++ b/sitio/src/views/vistaProduct.ejs
@@ -11,38 +11,13 @@
 
             <main class="main">
 
-                <!--   C a r o u s e l     -->
-                <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="/images/op.jpg" class="d-block w-100 slider-img" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="/images/n1.jpg" class="d-block w-100 slider-img" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="/images/db1.jpg" class="d-block w-100 slider-img" alt="...">
-                        </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-                        data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-                        data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
-                </div>
-
-                <h2 class=" titulo-Destacados">Productos Destacados</h2>
+                <h2 class=" titulo-Destacados">Productos </h2>
 
                 <!--  P r o d u c t o s   -->
                 <section class="conteiner-products">
                     <% productos.forEach(producto=> { %>
                         <article class="product">
-                            <a href="/products/detail/<%= producto.id %>">
+                            <a href="/products/detail/:id">
                                 <img class="img-product" src="<%= producto.image %> " alt="">
                                 <div class="product-description">
                                     <h3 class="name-product">
