--- a/sitio/src/views/productEdit.ejs
+++ b/sitio/src/views/productEdit.ejs
@@ -17,7 +17,7 @@
                 value="<%= producto.name %>">
             </div>
             <div class="text-center">
-              <img src=" <%= producto.image %> " alt="">
+              <img src="<%= producto.image %>" alt="">
             </div>
             <div class="mb-3">
               <label for="floatingTextarea">Descripción</label>
@@ -30,7 +30,7 @@
             </div>
             <div class="mb-3">
               <label for="formGroupExampleInput2" class="form-label">Cuotas</label>
-              <input type="text" class="form-control" id="formGroupExampleInput2" name="discount">
+                <input type="text" class="form-control" id="formGroupExampleInput2" name="discount" value="<%= producto.discount %>">
             </div>
             <button class="btn btn-primary" type="submit">Guardar</button>
             </form>
