--- a/sitio/src/views/login.ejs
+++ b/sitio/src/views/login.ejs
@@ -27,8 +27,8 @@
                         <!-- Grupo: Contraseña -->
                         <div class="form-group mb-3">
                             <label for="contraseña" class="font-weight-bold">Contraseña </label>
-                            <input type="password" name="contraseña" class="form-control" placeholder="Tu contraseña"
-                                id="contraseña">
+                            <input type="password" name="password" class="form-control" placeholder="Tu contraseña"
+                                id="password">
                             <span> </span>
                         </div>
 
