--- a/sitio/src/views/login.ejs
+++ b/sitio/src/views/login.ejs
@@ -19,8 +19,8 @@
                         <!-- Grupo: Correo electronico -->
                         <div class="form-group mb-3">
                             <label for="correo" class="font-weight-bold">Correo electrónico </label>
-                            <input type="email" name="correo" class="form-control"
-                                placeholder="Ingresa tu correo electrónico" id="correo">
+                            <input type="email" name="email" class="form-control"
+                                placeholder="Ingresa tu correo electrónico" id="email">
                             <span> </span>
                         </div>
 
