--- a/sitio/src/views/home.ejs
+++ b/sitio/src/views/home.ejs
@@ -43,7 +43,7 @@
                     <% productos.forEach(producto=> { %>
                         <article class="product">
                             <a href="/products/detail/<%= producto.id %>">
-                                <img class="img-product" src="<%= producto.images[0] %> " alt="">
+                                <img class="img-product" src="/images/<%= producto.images[0] %> " alt="">
                                 <div class="product-description">
                                     <h3 class="name-product">
                                         <%= producto.name %>
