--- a/sitio/src/views/partials/header.ejs
+++ b/sitio/src/views/partials/header.ejs
@@ -27,10 +27,17 @@
                 </ul>
             </div>
 
+            <div id="buscador" class="buscador">
+                <form action="" class="d-flex" method="GET" >
+                    <input type="search" class="form-control-search me-2" placeholder="Voy a tener suerte" name="search">
+                    <button type="submit" class= "btn btn-outline-primary" >Buscar</button>
+                </form>
+            </div>
+
             <!-- i c o n o s -->
             <div class="nav-right">
                 <ul class="menu-icons">
-                    <li><a href="/#" class="icons"><i class="fas fa-search"></i></a></li>
+                    <li><a href="/products/search" type="button" class="icons"><i class="fas fa-search"></i></a></li>
                     <li><a href="/users/cart" class="icons"><i class="fas fa-shopping-cart"></i></a></li>
                     <li><a href="/users/login" class="icons"><i class="fas fa-user"></i></a></li>
                 </ul>
