--- a/sitio/public/stylesheets/style.css
+++ b/sitio/public/stylesheets/style.css
@@ -8,3 +8,4 @@
 @import url('./home.css');
 @import url('./productAdd.css');
 @import url('./listaProductsAdmin.css');
+@import url('./resultSearch.css');
